Fixing the Null at Lastscore&fixing sound problems

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </div>
 
      <button id="btn" > <img id="start" src="images/play.png" alt="Start"> </button>
-
+<!-- Egg -->
      <img src="images/egg.png" class="invis"  id="egg"/>
+     
 <!-- Game Over -->
     <div class="gameEnd">
 
