--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Falling egg</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/egg.png">
 </head>
 <body>
@@ -43,6 +43,6 @@
     </div>
      
     
-     <script src="JS/egg.js"></script>
+     <script src="egg.js"></script>
 </body>
 </html>
