--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Falling egg</title>
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/egg.png">
 </head>
 <body>
      <div class="bg"></div>
 <!-- Top Container -->
      <div class="topcont">
-
-     <div id="lost"> </div>
-     <div id="score"></div>
-     <div id="lastScore"></div>
-     
+            <div id="lost"> </div>
+            <div id="score"></div>
+            <div id="lastScore"></div>
     </div>
 
      <button id="btn" > <img id="start" src="images/play.png" alt="Start"> </button>
