--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Play the exciting Falling egg game! Catch eggs as they fall, increase your score, Great fun for everyone!" />
     <title>Falling egg</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/egg.png">
